--- a/Frontend/src/pages/packagedetail/packagedetail.css
+++ b/Frontend/src/pages/packagedetail/packagedetail.css
@@ -109,7 +109,8 @@ font-size: 35px;
 }
 
 .package-maindetails {
-  width: 60%;
+  width: 70%;
+  text-align: justify;
 }
 .package-maindetails h2 {
   color: #162b32;
@@ -267,8 +268,8 @@ td {
   width: 70%;
 }
 .package-gallery img {
-  height: 50%;
-  width: 50%;
+  height: 500px;
+  width:500px;
   object-fit: cover;
   transition: all 1s ease;
   cursor: pointer;
@@ -334,17 +335,57 @@ a {
   font-size: 20px;
 }
 
+.package-map{
+
+  text-align:justify;
+  width: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .package-map img {
   height: 50%;
   width: 50%;
   object-fit: cover;
   margin: 20px 0px;
 }
+
+.day-circle{
+
+  margin-right: 50px;
+
+ 
+}
+
+.package-inclusions-item{
+
+  width: 30%;
+ margin-left: 30px;
+ 
+
+}
+
+.package-inclusions-item h3{
+
+  font-family: 'Roboto';
+  text-align: justify;
+  font-size: 20px;
+
+  
+}
+
+
 .package-inclusions{
   width: 100%;
-overflow-y: scroll;
+text-align: justify;
   height: 500px;
   padding: 20px;
+  margin: 20px;
+  display: flex;
+
+  
 }
 .inclusions-item {
   display: flex;
@@ -497,6 +538,16 @@ overflow-y: scroll;
   transition: all 1s ease;
 }
 
+
+.package-pricing{
+
+  width: 100%;
+  text-align: justify;
+}
+
+.package-pricing table{
+  width: 100%;
+}
 .package-pricing-btn{
 
   width: 70%;
@@ -560,8 +611,11 @@ padding: 20px;
 
 .feature-body{
   display: flex;
-  
+  text-align: justify;
   flex-wrap: wrap;
+  align-items: center;
+
+  width:90%;
 }
 .feature-item{
 
