--- a/Frontend/src/components/Team/team.css
+++ b/Frontend/src/components/Team/team.css
@@ -28,6 +28,7 @@ margin: 50px;
 .team-body{
 
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     margin: 0px 50px;
