--- a/Frontend/src/pages/blog/blog.css
+++ b/Frontend/src/pages/blog/blog.css
@@ -1,28 +1,32 @@
 .blog{
 
-    margin: 100px;
+    margin: 0px 100px;
     display: flex;
+    flex-wrap: wrap;
+    align-items: center;
     text-align: justify;
 }
 
 .blog h2{
 
     margin: 30px;
+    width: 500px;
 }
 
 .blog-item{
 
     width: 50%;
     display: flex;
-    margin: 20px;
+    margin: 10px;
     flex-direction: column; 
 }
 
 .blog-item img{
 
-    height: 100%;
-    width: 100%;
-    margin: 20px;
+    height: 450px;
+    width:500px;
+    
+    margin: 10px;
     object-fit: cover;
     transition: all 1s ease;
     cursor: pointer;
@@ -30,11 +34,12 @@
 
 .blog-item img:hover{
     transform: scale(1.1);
+   
 }
 
 .blog span{
 
-width: 100%;
+width: 500px;
 margin: 20px;
 font-size: 15px;
 font-weight: 200;
@@ -43,7 +48,7 @@ font-weight: 200;
     cursor: pointer;
     width: 30%;
     border: none;
-    padding: 7px;
+    padding: 10px;
     font-weight: bold;
 }
 
