--- a/Frontend/src/components/Team/team.css
+++ b/Frontend/src/components/Team/team.css
@@ -1,6 +1,6 @@
 .team{
 
-    height: 50vh;
+    height: 70vh;
     width: 100vw;
     margin-bottom: 30px;
 }
@@ -30,7 +30,7 @@ margin: 50px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-   
+    justify-content: space-evenly;
     margin: 0px 50px;
 }
 
@@ -39,7 +39,6 @@ margin: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 20px;
 }
 
 .image{
