--- a/Frontend/src/components/navbar/navbar.scss
+++ b/Frontend/src/components/navbar/navbar.scss
@@ -41,8 +41,8 @@
       padding: 10px;
       object-fit: cover;
       cursor: pointer;
-      height: 160px;
-      width: 160px;
+      height: 130px;
+      width: 130px;
       border-radius: 50%;
     }
     .left {
@@ -77,13 +77,13 @@
 
         padding-left: 10px;
         font-family: "Poppins";
-        font-size: 17pxpx;
-        font-weight: 600;
+        font-size: 17px;
+        
         text-transform: none !important;
       }
 
       .me-auto {
-        font-size: 18px;
+        font-size: 22px;
 
         display: flex;
         align-items: center;
@@ -139,6 +139,15 @@
     border-radius: 10px;
   }
 
+  .logo {
+    padding: 10px;
+    object-fit: cover;
+    cursor: pointer;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+  }
+
   .uppercontainer {
     display: flex;
     flex-direction: column;
@@ -154,6 +163,7 @@
 
   .container {
     padding-top: 30px;
+    
 
     .left {
       background-color: red;
@@ -175,9 +185,14 @@
       height: 50px;
       width: 50px;
     }
+    
     .logo {
-      height: 100px;
-      width: 100px;
+      padding: 10px;
+      object-fit: cover;
+      cursor: pointer;
+      height: 50px;
+      width: 50px;
+      border-radius: 50%;
     }
   }
 
@@ -211,5 +226,13 @@
   }
 
   .navbar-dark .navbar-collapse {
+  }
+  .logo {
+    padding: 10px;
+    object-fit: cover;
+    cursor: pointer;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
   }
 }
