--- a/Frontend/src/components/featured/featured.css
+++ b/Frontend/src/components/featured/featured.css
@@ -189,6 +189,37 @@ a {
   color: #fff;
 }
 
+.featured-search{
+  width: 50%;
+  background-color: white;
+  padding: 15px;
+  
+}
+.destination-search{
+  outline: none;
+  border: none;
+  width: 50%;
+  padding: 10px;
+  font-size: 16px;
+ 
+}
+.search-icon{
+  color: black;
+  font-size: 25px;
+}
+.search-button{
+  background-color: #ff4838;
+  outline: none;
+  padding: 10px;
+  color: white;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  width: 100px;
+  font-size: 15px;
+  
+}
+
 @media (max-width: 768px) {
 
   .slide-header {
