--- a/Frontend/src/components/Team/team.css
+++ b/Frontend/src/components/Team/team.css
@@ -44,7 +44,8 @@
   background-color: #1f2933;
   color: #fff;
   padding: 10px;
-  width: 50%;
+  margin: 0px 10px;
+  width: 70%;
   cursor: pointer;
   transition: all 1s ease;
 }
