--- a/Frontend/src/components/Team/team.css
+++ b/Frontend/src/components/Team/team.css
@@ -41,8 +41,8 @@
 }
 
 .name {
-  background-color: #1f2933;
-  color: #fff;
+  background-color: #1c1c1c;
+  color: #eac27a;
   padding: 10px;
   margin: 0px 10px;
   width: 60%;
