--- a/Frontend/src/components/featured/featured.css
+++ b/Frontend/src/components/featured/featured.css
@@ -2,8 +2,8 @@
   height: 100vh;
   background-image: linear-gradient(
       to left,
-      rgba(0, 0, 0, 0.2),
-      rgba(0, 0, 0, 0.2)
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
     ),
     url("https://res.cloudinary.com/dap91fhxh/image/upload/v1695637121/Home_apsd5z.jpg");
   background-size: cover;
@@ -17,8 +17,8 @@ a{
   height: 100vh;
   background-image: linear-gradient(
       to left,
-      rgba(0, 0, 0, 0.2),
-      rgba(0, 0, 0, 0.2)
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
     ),
     url("https://res.cloudinary.com/dap91fhxh/image/upload/v1677758077/wildbeast2_fhh5hl.jpg");
   background-size: cover;
@@ -33,8 +33,8 @@ a{
   height: 100vh;
   background-image: linear-gradient(
       to left,
-      rgba(0, 0, 0, 0.2),
-      rgba(0, 0, 0, 0.2)
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
     ),
     url("https://res.cloudinary.com/dap91fhxh/image/upload/v1677758075/gorilla_rsmtct.jpg");
   background-size: cover;
@@ -44,8 +44,8 @@ a{
   height: 100vh;
   background-image: linear-gradient(
       to left,
-      rgba(0, 0, 0, 0.2),
-      rgba(0, 0, 0, 0.2)
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
     ),
     url("https://res.cloudinary.com/dap91fhxh/image/upload/v1677758077/mountkenya_ue9zfq.jpg");
   background-size: cover;
@@ -56,8 +56,8 @@ a{
   height: 100vh;
   background-image: linear-gradient(
       to left,
-      rgba(0, 0, 0, 0.2),
-      rgba(0, 0, 0, 0.2)
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
     ),
     url("https://res.cloudinary.com/dap91fhxh/image/upload/v1677758073/boat-in-the-sea_q9c27c.jpg");
   background-size: cover;
@@ -67,8 +67,8 @@ a{
   height: 100vh;
   background-image: linear-gradient(
       to left,
-      rgba(0, 0, 0, 0.2),
-      rgba(0, 0, 0, 0.2)
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
     ),
     url("https://res.cloudinary.com/dap91fhxh/image/upload/v1680261334/IMG-20230331-WA0005_l2mwsr.jpg");
   background-size: cover;
@@ -79,8 +79,8 @@ a{
   height: 100vh;
   background-image: linear-gradient(
       to left,
-      rgba(0, 0, 0, 0.2),
-      rgba(0, 0, 0, 0.2)
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
     ),
     url("https://res.cloudinary.com/dap91fhxh/image/upload/v1677758073/cheetah-desert_siwnx9.jpg");
   background-size: cover;
@@ -91,8 +91,8 @@ a{
   height: 100vh;
   background-image: linear-gradient(
       to left,
-      rgba(0, 0, 0, 0.2),
-      rgba(0, 0, 0, 0.2)
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
     ),
     url("https://res.cloudinary.com/dap91fhxh/image/upload/v1677758076/helicopter_eddot1.jpg");
   background-size: cover;
@@ -103,8 +103,8 @@ a{
   height: 100vh;
   background-image: linear-gradient(
       to left,
-      rgba(0, 0, 0, 0.2),
-      rgba(0, 0, 0, 0.2)
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
     ),
     url("https://res.cloudinary.com/dap91fhxh/image/upload/v1677758076/people-on-the-boat_hx2zsz.jpg");
   background-size: cover;
@@ -123,7 +123,7 @@ a{
   padding: 11px 0;
   line-height: 1;
   font-weight: 700;
-  color: #e1d8d8;
+  color: #eac27a;
   letter-spacing: 1px;
   font-family: "Cookie", cursive;
 }
@@ -131,7 +131,7 @@ a{
   width: 80%;
   padding: 5px;
 
-  color: #ff4838;
+  color:#eac27a;
   text-align: center;
   margin: 10px;
 }
@@ -152,7 +152,7 @@ a{
 
 .adventure {
   margin-right: 20px;
-  background-color: #ff4838;
+  background-color: #eac27a;
   border: none;
   color: #fff;
   font-weight: 900;
@@ -161,19 +161,20 @@ a{
   width: 250px;
 }
 .adventure:hover {
-  border: 2px solid #ff4838;
+  border: 2px solid #eac27a;
   background-color: transparent;
-  color: #ff4838;
+  color: #eac27a;
 }
 .take-tour {
-  border: 2px solid #ff4838;
-  background-color: transparent;
-  color: #ff4838;
+  background-color: #1c1c1c;
+  color: #eac27a;
   padding: 15px;
   margin: 20px;
   cursor: pointer;
   font-weight: 900;
   width: 250px;
+  border: none;
+  outline: none;
 }
 a {
   color: inherit;
@@ -181,15 +182,22 @@ a {
 }
 
 .take-tour:hover {
-  background-color: #ff4838;
-  color: #fff;
+  color: #1c1c1c;
+  background-color: #eac27a;
+  border: none;
+  outline: none;
 }
 
 .featured-search {
   width: 50%;
-  background-color: white;
+  background-color: #1c1c1c;
   padding: 15px;
   margin-top: 25px;
+}
+
+.featured-search input{
+  background-color: #1c1c1c;
+  color: #eac27a;
 }
 .destination-search {
   outline: none;
@@ -199,14 +207,14 @@ a {
   font-size: 16px;
 }
 .search-icon {
-  color: black;
+  color: #eac27a;
   font-size: 25px;
 }
 .search-button {
-  background-color: #ff4838;
+  background-color: #eac27a;
   outline: none;
   padding: 10px;
-  color: white;
+  color: #1c1c1c;
   outline: none;
   border: none;
   cursor: pointer;
