--- a/Frontend/src/components/Footer/footer.css
+++ b/Frontend/src/components/Footer/footer.css
@@ -28,16 +28,16 @@ a:hover {
 
 .footer-header-item h1 {
   font-size: 18px;
-  color: #eac27a;
+  color: #fff;
   margin: 20px;
 }
 .footer-header-item span {
-  color: #eac27a;
+  color: #fff;
   font-weight: bold;
 }
 .footer-header-item ul {
   list-style: none;
-  color: #eac27a;;
+  color: #fff;;
   display: flex;
   flex-direction: column;
 }
@@ -82,7 +82,7 @@ a:hover {
 .review-info {
   display: flex;
   flex-direction: column;
-  color: #eac27a;
+  color: #fff;
 }
 .review-info h1 {
   font-size: 20px;
@@ -100,7 +100,7 @@ a:hover {
 .social {
   display: flex;
   flex-wrap: wrap;
-  color: #eac27a;
+  color: #aaa;
   font-size: 30px;
   align-items: center;
   justify-content: center;
@@ -137,7 +137,7 @@ a:hover {
 }
 
 .details span {
-  color: #eac27a;;
+  color: #fcf9f2;;
   font-size: 15px;
   margin-right: 10%;
   width: 40%;
