--- a/Frontend/src/components/featured/featured.css
+++ b/Frontend/src/components/featured/featured.css
@@ -228,7 +228,7 @@ a {
 
     line-height: 1;
     font-weight: 700;
-    color: #e1d8d8;
+    color: #eac27a;
     letter-spacing: 1px;
     font-family: "Cookie", cursive;
   }
@@ -236,8 +236,7 @@ a {
   .slide-cont {
     width: 100%;
     padding: 5px;
-
-    color: #ff4838;
+    color: #eac27a;
     text-align: center;
     margin: 10px;
   }
@@ -254,7 +253,8 @@ a {
 
   .featured-search {
     width: 100%;
-    background-color: white;
+    background-color: #1c1c1c;
+    color:#eac27a;
     padding: 15px;
   }
   .destination-search {
