--- a/Frontend/src/components/navbar/navbar.scss
+++ b/Frontend/src/components/navbar/navbar.scss
@@ -1,7 +1,7 @@
 .navbar-normal {
   width: 100%;
   color: #eac27a;
-  font-size: 20px;
+  font-size: 15px;
   height: 200px;
   position: fixed;
   top: 0;
@@ -41,8 +41,8 @@
       padding: 10px;
       object-fit: cover;
       cursor: pointer;
-      height: 150px;
-      width: 150px;
+      height: 130px;
+      width: 130px;
       border-radius: 50%;
     }
     .left {
@@ -77,7 +77,7 @@
 
         padding-left: 10px;
         font-family: "Poppins";
-        font-size: 18px;
+        font-size: 17px;
 
         text-transform: none !important;
       }
@@ -103,7 +103,7 @@
       }
 
       span:hover {
-        color: #d1411e;
+        color: #eac27a;
       }
     }
 
@@ -135,7 +135,7 @@
 
 @media (max-width: 767px) {
   .navbar {
-    background-color: #162b32;
+    background-color: #eac27a;
     border-radius: 10px;
   }
 
@@ -165,7 +165,7 @@
     padding-top: 30px;
 
     .left {
-      background-color: red;
+      background-color: #eac27a;
     }
 
     .center {
@@ -196,8 +196,7 @@
   }
 
   .link-nav {
-    color: #ffffff;
-
+    color: #1c1c1c;
     transition: all 0.2s linear;
     line-height: 20px;
     padding-left: 30px;
@@ -209,13 +208,13 @@
 
 @media (min-width: 768px) {
   .navbar-dark .navbar-toggler {
-    color: #fff;
-    border-color: #fff;
+    color: #eac27a;
+    border-color: #1c1c1c;
     padding: 20px;
   }
 
   .navbar-dark .navbar-nav .nav-link {
-    color: #fff;
+    color: #eac27a;
     padding: 20px;
   }
 
