--- a/Frontend/src/pages/Kenya/kenya.css
+++ b/Frontend/src/pages/Kenya/kenya.css
@@ -28,9 +28,7 @@
     margin-top: 150px;
     font-family: "Roboto";
     font-weight: 900;
-  
-    color: #ff4838;
-   
+    color: #eac27a;
     padding: 20px;
     display: flex;
     align-items: center;
