--- a/Frontend/src/pages/booking/booking.css
+++ b/Frontend/src/pages/booking/booking.css
@@ -63,13 +63,13 @@
 }
 
 .book_item button {
-  color: #fff;
+  color: #eac27a;
   font-size: 20px;
   font-weight: 900;
   padding: 10px;
   width: 80%;
   border: none;
-  background-color: #d1411e;
+  background-color: #1c1c1c;
   cursor: pointer;
   width: 80%;
   margin: 20px;
