--- a/Frontend/src/pages/DIY/diy.css
+++ b/Frontend/src/pages/DIY/diy.css
@@ -19,9 +19,7 @@
   font-family: "Roboto";
   font-weight: 900;
   font-size: 40px;
-
-  color: #ff4838;
-
+  color: #eac27a;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -48,8 +46,8 @@ select {
 
 .diy-book button {
   border: none;
-  background-color: #ff4838;
-  color: #fff;
+  background-color: #1c1c1c;
+  color: #eac27a;
   width: 50%;
   margin-bottom: 30px;
   padding: 10px;
@@ -104,7 +102,7 @@ select {
     font-family: "Roboto";
     font-weight: 900;
     font-size: 30px;
-    color: #ff4838;
+    color: #eac27a;;
     display: flex;
     align-items: center;
     justify-content: center;
