--- a/Frontend/src/pages/LuxuryAfricaSafaris/luxuryafricasafaris.css
+++ b/Frontend/src/pages/LuxuryAfricaSafaris/luxuryafricasafaris.css
@@ -28,7 +28,7 @@
     font-family: "Roboto";
     font-weight: 900;
   
-    color: #ff4838;
+    color: #eac27a;
     padding-top: 100px;
     display: flex;
     align-items: center;
