--- a/Frontend/src/pages/TravelKenya/travelguidekenya.css
+++ b/Frontend/src/pages/TravelKenya/travelguidekenya.css
@@ -29,9 +29,7 @@ text-align: justify;
     margin-top: 100px;
     font-family: "Roboto";
     font-weight: 900;
-  
-    color: #ff4838;
-  
+    color: #eac27a;
     padding: 20px;
     display: flex;
     align-items: center;
