--- a/Frontend/src/pages/policy/policy.css
+++ b/Frontend/src/pages/policy/policy.css
@@ -25,7 +25,7 @@
     font-family: "Roboto";
     font-weight: 900;
   
-    color: #ff4838;
+    color: #eac27a;
     background-color: rgba(0, 0, 0, 0.3);
     padding: 20px;
     display: flex;
