--- a/Frontend/src/pages/whereToGo/wheretogo.css
+++ b/Frontend/src/pages/whereToGo/wheretogo.css
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     font-weight: 900;
-    color: #333;
+    color: #eac27a;
 }
 
 .where-background{
