--- a/Frontend/src/components/navbar/navbar.scss
+++ b/Frontend/src/components/navbar/navbar.scss
@@ -5,7 +5,6 @@
   height: 200px;
   position: fixed;
   top: 0;
-
   z-index: 2;
   background: linear-gradient(to top, transparent 0%);
 
@@ -72,13 +71,11 @@
 
       .link-nav {
         color: #eac27a;
-
         transition: all 0.2s linear;
-
         padding-left: 10px;
         font-family: "Poppins";
         font-size: 17px;
-
+        
         text-transform: none !important;
       }
 
@@ -103,7 +100,7 @@
       }
 
       span:hover {
-        color: #eac27a;
+        color: #d1411e;
       }
     }
 
@@ -135,10 +132,10 @@
 
 @media (max-width: 767px) {
   .navbar {
-    background-color: #eac27a;
+   background-color: rgb(254, 250, 250);
     border-radius: 10px;
   }
-
+ 
   .logo {
     padding: 10px;
     object-fit: cover;
@@ -163,9 +160,10 @@
 
   .container {
     padding-top: 30px;
+    
 
     .left {
-      background-color: #eac27a;
+      background-color: red;
     }
 
     .center {
@@ -184,7 +182,7 @@
       height: 50px;
       width: 50px;
     }
-
+    
     .logo {
       padding: 10px;
       object-fit: cover;
@@ -195,35 +193,24 @@
     }
   }
 
-  .link-nav {
-    color: #1c1c1c;
-    transition: all 0.2s linear;
-    line-height: 20px;
-    padding-left: 30px;
-    font-family: Poppins;
-    font-weight: 600;
-    text-transform: none !important;
-  }
+  
 }
 
 @media (min-width: 768px) {
   .navbar-dark .navbar-toggler {
-    color: #eac27a;
-    border-color: #1c1c1c;
+    color: #fff;
+    border-color: #fff;
     padding: 20px;
   }
 
   .navbar-dark .navbar-nav .nav-link {
-    color: #eac27a;
+    color: #fff;
     padding: 20px;
   }
 
   .navbar-dark .navbar-brand {
     color: #fff;
     padding: 20px;
-  }
-
-  .navbar-dark .navbar-collapse {
   }
   .logo {
     padding: 10px;
