--- a/Frontend/src/components/featured/featured.css
+++ b/Frontend/src/components/featured/featured.css
@@ -5,7 +5,7 @@
       rgba(0, 0, 0, 0.3),
       rgba(0, 0, 0, 0.3)
     ),
-    url("https://res.cloudinary.com/dap91fhxh/image/upload/v1695637121/Home_apsd5z.jpg");
+    url("https://res.cloudinary.com/dap91fhxh/image/upload/v1713248929/image_jlu5vr.png");
   background-size: cover;
   background-position: center;
 }
